[gd_scene load_steps=5 format=3 uid="uid://c82rypswyb4hq"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_0m0hn"]
[ext_resource type="StyleBox" uid="uid://bqb4s04tkgdv0" path="res://art/game_over_button_normal.tres" id="1_fxa4t"]
[ext_resource type="StyleBox" uid="uid://byist1tojoneu" path="res://art/game_over_button_pressed.tres" id="2_7h8oe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_djtm4"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0m0hn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -17.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0.615686, 0.45098, 0.192157, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 128
text = "Game Over"

[node name="GameOverMessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0.615686, 0.45098, 0.192157, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 52

[node name="YourScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0.615686, 0.45098, 0.192157, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 52

[node name="TryAgainButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 52
theme_override_styles/normal = ExtResource("1_fxa4t")
theme_override_styles/hover = ExtResource("1_fxa4t")
theme_override_styles/pressed = ExtResource("2_7h8oe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_djtm4")
text = "Try again"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 52
theme_override_styles/normal = ExtResource("1_fxa4t")
theme_override_styles/hover = ExtResource("1_fxa4t")
theme_override_styles/pressed = ExtResource("2_7h8oe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_djtm4")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
